--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,9 @@ html {
     font-family: 'Inter', sans-serif;
     background: black;
 }
+
+@import '~swiper/swiper.min.css';
+@import '~@fortawesome/fontawesome-free/css/brands.css';
+@import '~@fortawesome/fontawesome-free/css/regular.css';
+@import '~@fortawesome/fontawesome-free/css/solid.css';
+@import '~@fortawesome/fontawesome-free/css/fontawesome.css';
