--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -109,9 +109,6 @@
                   </div>
                 </div>
                 <div class='sub'>
-                  <p class='' *ngIf="!isHaveTicket">
-                    Lưu ý: Mục có dấu (*) là thông tin bắt buộc phải điền
-                  </p>
                   <p class='suss_mess' *ngIf="isHaveTicket">
                     Chúng tôi rất mong <br> được đón tiếp quý khách!
                   </p>
@@ -124,12 +121,6 @@
                     Ban tổ chức sẽ không chịu trách nhiệm nếu QR code đã được <span class='nowrap'>check-in</span>
                     <br>
                     trong trường hợp KH không bảo mật được thông tin.
-                  </span>
-                  <span *ngIf="!isHaveTicket">
-                    Trong trường hợp thông tin đăng nhập chưa chính xác, Quý khách vui lòng liên hệ Chuyên Viên Quản Lý
-                    Khách
-                    Hàng:
-                    hoặc gọi đến tổng đài <strong>180058822</strong> để được trợ giúp
                   </span>
                 </div>
               </ng-template>
@@ -168,6 +159,17 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class='sub' *ngIf="!isHaveTicket">
+        <p class='' *ngIf="!isHaveTicket">
+          Lưu ý: Mục có dấu (*) là thông tin bắt buộc phải điền
+        </p>
+        <span>
+          Trong trường hợp thông tin đăng nhập chưa chính xác, Quý khách vui lòng liên hệ Chuyên Viên Quản Lý
+          Khách
+          Hàng:
+          hoặc gọi đến tổng đài <strong>180058822</strong> để được trợ giúp
+        </span>
       </div>
     </div>
   </div>
