--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
         <p class='title-mobile'>
           Chúc mừng quý khách là một trong những vị khách sở hữu cặp vé tham dự
         </p>
-        <img class='img-mobile' src="../assets/cat dung cụm chữ thời khắc giao thời.png" alt="">
+        <img class='img-mobile' src="../assets/thoi khac giao thoi.png" alt="">
         <form [formGroup]="form" (ngSubmit)="submit()" ngNativeValidate>
           <div class='item'>
             MÃ ĐỊNH DANH*
@@ -35,8 +35,7 @@
           </button>
         </form>
       </div>
-      <img class='img-mobile mb-20' *ngIf="isHaveTicket" src="../assets/cat dung cụm chữ thời khắc giao thời.png"
-        alt="">
+      <img class='img-mobile mb-20' *ngIf="isHaveTicket" src="../assets/thoi khac giao thoi.png" alt="">
       <div class='swiper-div' *ngIf="isHaveTicket">
         <div class="swiper">
           <div>
