--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,12 +31,12 @@
 
     .logo_tech {
         width: auto;
-        height: 40px;
+        height: 50px;
     }
 
     .logo_30 {
         width: auto;
-        height: 50px;
+        height: 60px;
     }
 
     .content {
@@ -206,6 +206,16 @@
 
     .bg {
         display: none !important;
+    }
+
+    .logo_tech {
+        width: auto;
+        height: 40px !important;
+    }
+
+    .logo_30 {
+        width: auto;
+        height: 50px !important;
     }
 
     .title-mobile {
