--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -199,7 +199,7 @@
     }
 
     .bg-mobile {
-        background: url('../assets/Landingpage_Mobile_01\ background\ +\ logo\ JPG.jpg');
+        background: url('../assets/Landingpage_Mobile.jpg');
         justify-content: center !important;
         background-size: cover !important;
     }
