--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,9 @@
           Vui lòng điền thông tin sau để nhận vé:
         </p>
         <p class='title-mobile'>
-          Chúc mừng quý khách đã sở hữu cặp vé tham dự
+          Chúc mừng quý khách đã sở hữu cặp vé 
+          <br>
+          tham dự
         </p>
         <img class='img-mobile' src="../assets/thoi khac giao thoi.png" alt="">
         <form [formGroup]="form" (ngSubmit)="submit()" ngNativeValidate>
