--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,14 +14,14 @@
           Vui lòng điền thông tin sau để nhận vé:
         </p>
         <p class='title-mobile'>
-          Chúc mừng quý khách đã sở hữu cặp vé 
+          Chúc mừng quý khách đã sở hữu cặp vé
           <br>
           tham dự
         </p>
         <img class='img-mobile' src="../assets/thoi khac giao thoi.png" alt="">
         <form [formGroup]="form" (ngSubmit)="submit()" ngNativeValidate>
           <div class='item'>
-            MÃ ĐỊNH DANH*
+            MÃ SỐ LƯU VÉ*
             <input type="text" formControlName='code' required>
           </div>
           <div class='item'>
@@ -65,9 +65,6 @@
                   </div>
                   <img class='qr' src="../assets/qr.png" alt="">
                 </div>
-                <button *ngIf="isHaveTicket" (click)='download(data)'>
-                  LƯU HÌNH ẢNH VÉ {{index + 1}}
-                </button>
                 <div *ngIf="isHaveTicket">
                   <p>
                     <strong>AGENDA</strong>
@@ -110,6 +107,10 @@
                   </div>
                 </div>
                 <div class='sub'>
+                  <p class='suss_mess'>Quý Khách vui lòng chụp màn hình
+                    <br>
+                    vé để check in vào sự kiện.
+                  </p>
                   <p class='suss_mess' *ngIf="isHaveTicket">
                     Chúng tôi rất mong <br> được đón tiếp quý khách!
                   </p>
