--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,6 +65,13 @@
                   </div>
                   <img class='qr' src="../assets/qr.png" alt="">
                 </div>
+                <p>
+                  {{index + 1}} / {{user.length}}
+                </p>
+                <p class='suss_mess_s'>Quý Khách vui lòng chụp màn hình
+                  <br>
+                  vé để check in vào sự kiện.
+                </p>
                 <div *ngIf="isHaveTicket">
                   <p>
                     <strong>AGENDA</strong>
@@ -107,10 +114,6 @@
                   </div>
                 </div>
                 <div class='sub'>
-                  <p class='suss_mess'>Quý Khách vui lòng chụp màn hình
-                    <br>
-                    vé để check in vào sự kiện.
-                  </p>
                   <p class='suss_mess' *ngIf="isHaveTicket">
                     Chúng tôi rất mong <br> được đón tiếp quý khách!
                   </p>
@@ -142,6 +145,9 @@
                   d="M24.752,58.25c-0.397,0-0.752-0.154-1.06-0.463L2.207,36.303c-0.306-0.304-0.458-0.655-0.458-1.057                  c0-0.4,0.152-0.752,0.458-1.058l2.305-2.305c0.309-0.308,0.663-0.461,1.06-0.461c0.398,0,0.752,0.153,1.061,0.461l18.119,18.12                  l18.122-18.12c0.306-0.308,0.657-0.461,1.057-0.461c0.402,0,0.753,0.153,1.059,0.461l2.306,2.305                  c0.308,0.306,0.461,0.657,0.461,1.058c0,0.401-0.153,0.753-0.461,1.057L25.813,57.787C25.504,58.096,25.15,58.25,24.752,58.25z">
                 </path>
               </svg>
+              <span>
+                VÉ TRƯỚC
+              </span>
             </div>
           </div>
         </div>
@@ -158,6 +164,9 @@
                   d="M24.752,58.25c-0.397,0-0.752-0.154-1.06-0.463L2.207,36.303c-0.306-0.304-0.458-0.655-0.458-1.057                  c0-0.4,0.152-0.752,0.458-1.058l2.305-2.305c0.309-0.308,0.663-0.461,1.06-0.461c0.398,0,0.752,0.153,1.061,0.461l18.119,18.12                  l18.122-18.12c0.306-0.308,0.657-0.461,1.057-0.461c0.402,0,0.753,0.153,1.059,0.461l2.306,2.305                  c0.308,0.306,0.461,0.657,0.461,1.058c0,0.401-0.153,0.753-0.461,1.057L25.813,57.787C25.504,58.096,25.15,58.25,24.752,58.25z">
                 </path>
               </svg>
+              <span>
+                VÉ SAU
+              </span>
             </div>
           </div>
         </div>
