--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
         <img class='img-mobile' src="../assets/thoi khac giao thoi.png" alt="">
         <form [formGroup]="form" (ngSubmit)="submit()" ngNativeValidate>
           <div class='item'>
-            MÃ SỐ LƯU VÉ*
+            MÃ SỐ NHẬN VÉ*
             <input type="text" formControlName='code' required>
           </div>
           <div class='item'>
