--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -177,8 +177,8 @@
         }
 
         .qr {
-            width: 120px;
             margin-top: 20px;
+            text-align: center;
         }
 
         button {
